# ProjectBulldog

./: .gitignore  .pre-commit-config.yaml  CMakeLists.bak.txt  CMakeLists.txt  CPPLINT.cfg  README.md  STYLE.md
assets/: gym.glb
assets/shaders/default/: default_mesh.vert  input_structures.slang  mesh.frag  mesh.vert  texture.frag
assets/shaders/demo/: gradient.comp  wave.comp
config/: engine.conf  init.json
engine/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine.h  engine_types.h  main.cpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h
lib/: CMakeLists.txt
old/: engine.cpp  vk_loader.cpp
orion/: CMakeLists.bak.txt  CMakeLists.txt  Makefile  camera.cc  camera.cpp  camera.h  cmake_install.cmake  engine.bak.h  engine.h  entry.h  entry.hpp  main.cc  main.cpp  vk_descriptors.cpp  vk_images.cpp  vk_loader.h  vk_pipelines.h
orion/core/: engine_types.h  engine_types.hpp  render_engine.h  renderer.cc  renderer.cpp  renderer.h  renderer.hpp  renderer_backend.hpp
orion/core/render_engines/vulkan/: vulkan_descriptors.cc  vulkan_descriptors.h  vulkan_engine.cc  vulkan_engine.h  vulkan_images.cc  vulkan_images.h  vulkan_initializers.cc  vulkan_initializers.h  vulkan_loaders.cc  vulkan_loaders.h  vulkan_pipelines.cc  vulkan_pipelines.h  vulkan_types.h
orion/core/render_engines/vulkan-3/: engine.cpp  engine.h  vk_descriptors.h
orion/core/render_engines/vulkan-old/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_descriptors.cpp  vulkan_images.hpp  vulkan_initializers.cpp  vulkan_types.hpp
orion/core/renderer_backends/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_descriptors.cpp  vulkan_descriptors.hpp  vulkan_images.cpp  vulkan_initializers.hpp  vulkan_pipelines.cpp  vulkan_pipelines.hpp  vulkan_types.hpp
orion/core/util/: containers.hpp
orion/entity/: camera.cc  camera.h  oentity.h
orion/util/: containers.h  logger.h  logger.hpp
sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake  entry.cpp
scenes/: demo.json
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  input_structures.glsl  mesh.frag.glsl  mesh.vert.glsl
